--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.1.7",
@@ -17,9 +18,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
+    "react-social-media-embed": "^2.5.13",
     "react-transition-group": "^4.4.5",
+    "sonner": "^1.4.41",
     "yup": "^1.4.0"
   },
   "devDependencies": {
