--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-facebook": "^9.0.12",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-social-media-embed": "^2.5.13",
     "react-transition-group": "^4.4.5",
